fix table alignment and hand tile compression

--- a/azulsummerpavilion.css
+++ b/azulsummerpavilion.css
@@ -295,6 +295,7 @@
   position: relative;
   display: inline-block;
   margin-left: 20px;
+  overflow: auto;
 }
 .player-table-wrapper .player-hand {
   height: 128px;
